@@ -132,4 +132,6 @@ ATTR_killdelay,
 ATTR_acllogic,
 ATTR_aclgrpslpy,
 ATTR_keepcompleted,
+ATTR_submithosts,
+ATTR_allownodesubmit,
 ATTR_servername,
